# Disconinuity-Identification-in-Numerical-solutions-of-DEs

./: .gitignore  1D_Discontinuity_Data_Generation.ipynb  2D_Data_Generation.ipynb  CoarseDataGen.py  GNN_FEATURES.md  OneDimData.py  OneDimensional.py  README.md  REFERENCES.md  Readme.md  TrainCoarseModel.py  U_Net_Architecture.ipynb  main.py  polAnnihilation2D.py  polynomialAnnhilation.py  pyproject.toml  pyrightconfig.json
1D/: polynomialAnnhilation.py
2D/: CoarseModel.py  FineModel.py  OneStep.py  TrainCoarseModel.py  main.py  polAnnihilation2D.py
ColabNotebooks/: 1D_Discontinuity_Data_Generation.ipynb  2D_Data_Generation.ipynb  GAT_Test.ipynb  Graph_Attention_Network.ipynb  HED_Detector.ipynb  NumericalModelCNNipynb.ipynb  Numerical_Data_Generation.ipynb
DG-1D/: Appendix.py  DataGen.ipynb  DataGen2D.ipynb  x.mat
ModelDense1D/: keras_metadata.pb  saved_model.pb
configs/: gnn1d-euler.yaml  gnn1d-numerical.yaml  gnn1d.yaml  gnn2d-corrected-baseline.yaml  gnn2d-data-v3-a.yaml  gnn2d-data-v3-b.yaml  gnn2d-data-v3-c.yaml  gnn2d-exact.yaml  gnn2d-feature-ablation.yaml  gnn2d-label-halo.yaml  gnn2d-local-extrema.yaml  gnn2d-mixed.yaml  mlp1d-euler.yaml  mlp1d-numerical.yaml  mlp1d.yaml  mlp2d-exact.yaml
scripts/: calibrate_v3_labels.py  evaluate_data_v3.py  evaluate_feature_ablations.py  evaluate_gnn2d.py  evaluate_rotation_grid.py  evaluate_safety_net.py  evaluate_smooth_convergence.py  freeze_phase1_inputs.py  freeze_phase4_evidence.py  plot_rotation2d.py  plot_rotation_metrics.py  review_gnn_features.py  run_advection.py  run_benchmarks.py  run_euler2d.py  (+9 more)
(+6836 files in other folders)
