[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tci"
version = "0.1.0"
description = "Reproducible troubled-cell indicator experiments for discontinuous Galerkin methods"
readme = "Readme.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Zuhaib Ul Zamann" }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
research = [
  "matplotlib>=3.7",
  "scipy>=1.10",
  "torch>=2.1",
  "torch-geometric>=2.4",
]
test = ["pytest>=7.4"]

[project.scripts]
tci = "tci.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

